Add getModelMetadata api
